--- a/index.html
+++ b/index.html
@@ -783,8 +783,8 @@
           <div class="novel-card">
               <img src="novel3.jpg" alt="Novel 3">
               <div class="novel-info">
-                  <h3 class="novel-title">Dual Lever:- Loophole</h3>
-                  <p class="novel-desc">Sequel to Dual lever but on a greater scale.</p>
+                  <h3 class="novel-title">If I was me</h3>
+                  <p class="novel-desc">The story of a flaw</p>
                  <a href="index.html" class="read-btn" target="_blank">Read Now</a>
               </div>
           </div>
