--- a/index.html
+++ b/index.html
@@ -1487,7 +1487,43 @@
             text-shadow: 0 0 5px #ff002b, 0 0 10px #fff;
           }
         }
-        
+
+        /* glow edges */
+.comments-section::before,
+.comments-section::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 10px;
+    background: linear-gradient(90deg,
+        pink,
+        blue,
+        violet,
+        purple,
+        cyan,
+        white,
+        orange,
+        red);
+    background-size: 400% 400%;
+    animation: glowEdgeAnim 6s linear infinite;
+    filter: blur(8px);
+    z-index: -1; 
+}
+
+.comments-section::before {
+    top: 0;
+}
+
+.comments-section::after {
+    bottom: 0;
+}
+
+@keyframes glowEdgeAnim {
+    0% { background-position: 0% 50%; }
+    100% { background-position: 100% 50%; }
+}
+
 
 
     </style>
