--- a/index.html
+++ b/index.html
@@ -1100,7 +1100,8 @@
             background: linear-gradient(145deg, #111, #222);
             color: #fff;
             position: relative;
-            overflow: hidden;
+            overflow: visible;
+            z-index: 1;
         }
 
         /* Section Title */
