--- a/index.html
+++ b/index.html
@@ -966,7 +966,8 @@
             background: linear-gradient(145deg, #111, #222);
             color: #fff;
             position: relative;
-            overflow: hidden;
+            overflow: visible;
+            z-index: 1;
         }
 
         /* Section Title */
@@ -1517,6 +1518,41 @@
 }
 
 .comments-section::after {
+    bottom: 0;
+}
+
+@keyframes glowEdgeAnim {
+    0% { background-position: 0% 50%; }
+    100% { background-position: 100% 50%; }
+}
+
+.gallery-section::before,
+.gallery-section::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 10px;
+    background: linear-gradient(90deg,
+        red,
+        velvet,
+        violet,
+        green,
+        black,
+        orange,
+        white,
+        red);
+    background-size: 400% 400%;
+    animation: glowEdgeAnim 6s linear infinite;
+    filter: blur(3px);
+    z-index: -1; 
+}
+
+.gallery-section::before {
+    top: 0;
+}
+
+.gallery-section::after {
     bottom: 0;
 }
 
