--- a/index.html
+++ b/index.html
@@ -765,7 +765,8 @@
             border-radius: 20px;
             box-shadow: 0 0 20px rgba(255, 0, 43, 0.3);
             position: relative;
-            overflow: hidden;
+            overflow: visible;
+            z-index: 1;
         }
 
         /* Fancy border effects */
@@ -1553,6 +1554,41 @@
 }
 
 .gallery-section::after {
+    bottom: 0;
+}
+
+@keyframes glowEdgeAnim {
+    0% { background-position: 0% 50%; }
+    100% { background-position: 100% 50%; }
+}
+
+.faq-section::before,
+.faq-section::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 10px;
+    background: linear-gradient(90deg,
+        red,
+        orange,
+        yellow,
+        green,
+        cyan,
+        blue,
+        violet,
+        red);
+    background-size: 400% 400%;
+    animation: glowEdgeAnim 6s linear infinite;
+    filter: blur(8px);
+    z-index: -1; /* Put behind content */
+}
+
+.faq-section::before {
+    top: 0;
+}
+
+.faq-section::after {
     bottom: 0;
 }
 
