--- a/index.html
+++ b/index.html
@@ -765,8 +765,7 @@
             border-radius: 20px;
             box-shadow: 0 0 20px rgba(255, 0, 43, 0.3);
             position: relative;
-            overflow: visible;
-            z-index: 1;
+            overflow: hidden;
         }
 
         /* Fancy border effects */
