--- a/index.html
+++ b/index.html
@@ -1815,7 +1815,7 @@
                   const targetSection = document.getElementById(targetId);
                   if (targetSection) {
                       window.scrollTo({
-                          top: targetSection.offsetTop - 50, // Adjust for navbar height
+                          top: targetSection.offsetTop - 50, 
                           behavior: "smooth"
                       });
                   }
