--- a/index.html
+++ b/index.html
@@ -966,8 +966,7 @@
             background: linear-gradient(145deg, #111, #222);
             color: #fff;
             position: relative;
-            overflow: visible;
-            z-index: 1;
+            overflow: hidden;
         }
 
         /* Section Title */
